<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCEFF0"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_home"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <!-- Pulsante + -->
    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:tint="@android:color/black"
        android:src="@android:drawable/ic_input_add"
        android:contentDescription="@string/desc_add_button" />

    <!-- Riquadro bianco con radius 15 -->
    <LinearLayout
        android:id="@+id/contentBox"
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:layout_below="@id/titleText"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_box"
        android:gravity="center_vertical"
        android:padding="16dp">
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2"
            android:rowCount="4"
            android:padding="8dp">

            <!-- Colonna 1 -->
            <LinearLayout
                android:id="@+id/categoryComputer"
                android:layout_width="121dp"
                android:layout_height="110dp"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="#E0E0E0">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_computer"
                    android:contentDescription="@string/desc_computer" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/categoryHome"
                android:layout_width="121dp"
                android:layout_height="110dp"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="#E0E0E0">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_home"
                    android:contentDescription="@string/desc_casa" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/categoryBook"
                android:layout_width="121dp"
                android:layout_height="110dp"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="#E0E0E0">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_book"
                    android:contentDescription="@string/desc_libro" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/categoryCar"
                android:layout_width="121dp"
                android:layout_height="110dp"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="#E0E0E0">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_car"
                    android:contentDescription="@string/desc_car"/>
            </LinearLayout>

            <!-- Colonna 2 -->
            <LinearLayout
                android:id="@+id/categoryMakeup"
                android:layout_width="121dp"
                android:layout_height="110dp"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="#E0E0E0">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_makeup"
                    android:contentDescription="@string/desc_makeup" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/categoryDress"
                android:layout_width="121dp"
                android:layout_height="110dp"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="#E0E0E0">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_dress"
                    android:contentDescription="@string/desc_dress" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/categorySport"
                android:layout_width="121dp"
                android:layout_height="110dp"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="#E0E0E0">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_sport"
                    android:contentDescription="@string/desc_sport" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/categoryPet"
                android:layout_width="121dp"
                android:layout_height="110dp"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="#E0E0E0">
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_pet"
                    android:contentDescription="@string/desc_animali" />
            </LinearLayout>

        </GridLayout>
    </LinearLayout>
</RelativeLayout>
